--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,47 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+
+ @import url('http://fonts.cdnfonts.com/css/ds-digital');
+                
+
+
+body{
+  background-color: rgb(15, 12, 18);
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.MyDiv{
+    
+  display: flexbox;
+  text-shadow: 30px;
+  text-align: center;
+  margin-top: 200px;
+  font-family: 'DS-Digital', sans-serif;
+  font-size: xx-large;
+  color: rgb(68, 186, 68);
+  margin-bottom: 40px;
+
 }
+/* 
+h1{
+
+  font-size:50px ;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  color: beige;
+  font-weight: bolder;
+  text-align: center;
+  margin-top: 80px;
+  
+} */
+
+
+button{
+   width: 200px;
+   height: 40px;
+  background-color: bisque;
+  color:rgb(210, 36, 30);
+  font-size: medium;
+  font-weight: bold; 
+  border-radius: 5px;
+  text-transform: capitalize;
+  text-shadow:4px ;
+  
+  }
